# MyAndroid

./: README.md  build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  myandroid.c
app/src/main/cpp/calculator/: calc.y  myandroid.c
app/src/main/java/com/example/myandroid/: MainActivity.kt  MyApplication.kt
app/src/main/java/com/example/myandroid/data/: AppDatabase.kt  Counter.kt  CounterDao.kt  CounterEntity.kt  CounterRepository.kt  WordInfoRepository.kt
app/src/main/java/com/example/myandroid/data/local/: AppDatabase.kt  Converters.kt  WordDefinitionDao.kt  WordDefinitionEntity.kt
app/src/main/java/com/example/myandroid/data/remote/: DictionaryService.kt  WordInfoDto.kt
app/src/main/java/com/example/myandroid/database/: AppDatabase.kt
app/src/main/java/com/example/myandroid/database/dao/: CounterDao.kt  WordDefinitionDao.kt
app/src/main/java/com/example/myandroid/database/entity/: CounterEntity.kt  WordDefinitionEntity.kt
app/src/main/java/com/example/myandroid/database/utils/: Converters.kt
app/src/main/java/com/example/myandroid/di/: DaoModule.kt  DataModule.kt  DatabaseModule.kt  NetworkModule.kt
app/src/main/java/com/example/myandroid/model/: Counter.kt  WordDefinition.kt
app/src/main/java/com/example/myandroid/navigation/: MyNavHost.kt  TopLevelDestination.kt
app/src/main/java/com/example/myandroid/network/: DictionaryService.kt  WordInfoDto.kt
app/src/main/java/com/example/myandroid/ui/: MyAndroidApp.kt  MyApp.kt
app/src/main/java/com/example/myandroid/ui/calculator/: CalculatorNavigation.kt  CalculatorScreen.kt  CalculatorViewModel.kt
app/src/main/java/com/example/myandroid/ui/clock/: ClockScreen.kt  ClockState.kt  ClockViewModel.kt
app/src/main/java/com/example/myandroid/ui/counter/: CounterNavigation.kt  CounterScreen.kt  CounterState.kt  CounterViewModel.kt
app/src/main/java/com/example/myandroid/ui/dictionary/: DictionaryNavigation.kt  DictionaryScreen.kt  DictionaryViewModel.kt
app/src/main/java/com/example/myandroid/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/com/example/myandroid/ui/theme/counter/: CounterScreen.kt  CounterState.kt  CounterViewModel.kt
app/src/main/java/com/example/myandroid/ui/viewer/: ViewerNavigation.kt  ViewerScreen.kt
app/src/main/java/com/example/myandroid/utils/: MyResult.kt
app/src/main/res/values/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
